# AuthProject2025

./: notes.txt
backend/: Cargo.toml
backend/src/: lib.rs  testb.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Map.tsx  QR-Page.tsx  Technicals.ts  serverCallsEnum.ts
frontend/src/components/: IntroAnimation.tsx  Transition.tsx
frontend/src/hooks/: useScript.tsx
frontend/src/pages/accountCreation/: AccountCreation.tsx
frontend/src/pages/components/: Map.tsx
frontend/src/pages/display-qr/: DisplayQR.tsx
frontend/src/pages/home/: Home.css  Home.tsx
frontend/src/pages/login/: Login.css  Login.tsx  LoginMFA.tsx
java_backend/website_backend/: pom.xml
java_backend/website_backend/src/main/java/com/example/website_backend/: WebsiteBackendApplication.java
java_backend/website_backend/src/main/java/com/example/website_backend/config/: WebConfig.java
java_backend/website_backend/src/main/java/com/example/website_backend/controllers/: WebController.java
java_backend/website_backend/src/main/java/com/example/website_backend/dto/: LocationUpdate.java
java_backend/website_backend/src/main/java/com/example/website_backend/models/: User.java  UserExposed.java  UserFetchRequestModel.java
java_backend/website_backend/src/main/resources/: application.properties
rust_backend/: Cargo.toml
rust_backend/Spreadsheets/: Untitled 1.csv
rust_backend/src/: errors.rs  lib.rs  main.rs  models.rs  services.rs  testb.rs
rust_backend/src/helpers/: database_interface.rs  math.rs
(+5 files in other folders)
