[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name="lib"
path="src/lib.rs"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
actix-web = "4"
actix-cors = "0.7.1"
bcrypt = "0.17.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex-literal = "1.0.0"
data-encoding = "2.9.0"
[dependencies.mongodb]
version = "3.2.4"
features = ["sync"]
