[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name="lib"
path="src/lib.rs"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
actix-web = "4"
actix-cors = "0.7.1"
bcrypt = "0.17.0"
base32 = "0.5.1"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex-literal = "1.0.0"
data-encoding = "2.9.0"
base64 = "0.22.1"
serde_json = "1.0.142"
rand = "0.9.2"
[dependencies.mongodb]
version = "3.2.4"
features = ["sync"]
